--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -108,6 +108,7 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -344,7 +345,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -556,6 +556,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -575,7 +576,6 @@ allow 2a0f:df00:0:255::198;
 allow 2a0f:df00:0:255::199;
 allow 2a0f:df00:0:255::200;
 allow 2a10:8a40:f313::29;
-allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a12:a800:11:1:124:198:131:108;
@@ -594,6 +594,7 @@ allow 2a12:a800:1:1:2:58:56:93;
 allow 2a12:a800:1:1:45:154:98:33;
 allow 2a12:a800:2:1:185:241:208:115;
 allow 2a12:a800:2:1:185:241:208:185;
+allow 2a12:a800:2:1:185:241:208:202;
 allow 2a12:a800:2:1:185:241:208:204;
 allow 2a12:a800:2:1:185:241:208:206;
 allow 2a12:a800:2:1:185:241:208:71;
