--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -124,7 +124,6 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
@@ -227,6 +226,7 @@ set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.65.149.96;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.143.65;
 set_real_ip_from 177.153.51.238;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.17.170.144;
@@ -255,7 +255,6 @@ set_real_ip_from 179.43.159.201;
 set_real_ip_from 179.43.159.78;
 set_real_ip_from 179.43.182.232;
 set_real_ip_from 179.43.182.58;
-set_real_ip_from 179.55.71.11;
 set_real_ip_from 180.150.226.99;
 set_real_ip_from 185.100.85.132;
 set_real_ip_from 185.100.87.136;
@@ -728,7 +727,6 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:b011:4006:545c::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -835,6 +833,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -845,7 +844,6 @@ set_real_ip_from 23.191.200.26;
 set_real_ip_from 23.191.200.27;
 set_real_ip_from 23.191.200.28;
 set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.30;
 set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
@@ -1324,6 +1322,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1382,7 +1381,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:240;
 set_real_ip_from 2a12:a800:2:1:45:138:16:248;
 set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
-set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
 set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
@@ -1435,6 +1433,7 @@ set_real_ip_from 37.228.129.189;
 set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
+set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
 set_real_ip_from 38.135.24.30;
 set_real_ip_from 38.135.24.31;
@@ -1472,7 +1471,6 @@ set_real_ip_from 45.138.16.240;
 set_real_ip_from 45.138.16.248;
 set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
-set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
 set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
@@ -1534,26 +1532,6 @@ set_real_ip_from 45.84.107.76;
 set_real_ip_from 45.84.107.97;
 set_real_ip_from 45.88.186.89;
 set_real_ip_from 45.88.186.92;
-set_real_ip_from 45.90.185.100;
-set_real_ip_from 45.90.185.101;
-set_real_ip_from 45.90.185.102;
-set_real_ip_from 45.90.185.103;
-set_real_ip_from 45.90.185.104;
-set_real_ip_from 45.90.185.105;
-set_real_ip_from 45.90.185.106;
-set_real_ip_from 45.90.185.107;
-set_real_ip_from 45.90.185.108;
-set_real_ip_from 45.90.185.109;
-set_real_ip_from 45.90.185.110;
-set_real_ip_from 45.90.185.111;
-set_real_ip_from 45.90.185.112;
-set_real_ip_from 45.90.185.113;
-set_real_ip_from 45.90.185.114;
-set_real_ip_from 45.90.185.115;
-set_real_ip_from 45.90.185.116;
-set_real_ip_from 45.90.185.117;
-set_real_ip_from 45.90.185.118;
-set_real_ip_from 45.90.185.119;
 set_real_ip_from 45.91.250.107;
 set_real_ip_from 45.9.148.50;
 set_real_ip_from 45.9.156.101;
@@ -1734,6 +1712,7 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
 set_real_ip_from 93.88.75.35;
+set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
